--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <section id="about" class="section">
             <h2>About Me</h2>
             <div class="about-content">
-                <p>I am a 4th-year student pursuing a Bachelor of Science in Information Technology at STI West Negros University, with hands-on experience as an Assistant Programmer in our capstone project. My primary focus is on front-end development, creating user-friendly and visually appealing website interfaces. I am a kind, respectful, and hardworking individual who is eager to learn, adapt, and contribute effectively to any team or project.</p>
+                <p>I am a 4th-year student pursuing a Bachelor of Science in Information Technology at STI West Negros University, an Assistant Programmer in our capstone project. My primary focus is on front-end development, creating user-friendly and visually appealing website interfaces. I am a kind, respectful, and hardworking individual who is eager to learn, adapt, and contribute effectively to any team or project.</p>
             </div>
         </section>
 
@@ -182,4 +182,5 @@
     </footer>
     <script src="portfolio.js"></script>
 </body>
+
 </html>
